# cloudflare-worker

./: .gitignore  Cargo.toml  build.sh  calcagebra.js  example.js  index.js  package.json  rust-toolchain.toml  shell.nix  webpack.config.js  wrangler.toml
.github/workflows/: wrangler.yml
.wrangler/tmp/dev-KDGbP7/: shim.js  shim.js.map
src/: ast.rs  errors.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  standardlibrary.rs  token.rs  types.rs
