[package]
name = "calcagebra"
version = "1.11.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.25.2"
plotters = "0.3.6"
rand = "0.8.5"
serde = "1.0.202"
serde_json = "1.0.117"
worker = "0.2.0"

[profile.release]
strip = true
opt-level = "z"

[profile.dev]
opt-level = 3
debug = true
