[package]
name = "calcagebra"
version = "3.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0.202"
serde_json = "1.0.117"
textplots = "0.8.6"
worker = "0.2.0"
codespan-reporting = "0.11.1"
plotters = "0.3.7"
unindent = "0.2.3"

[profile.release]
strip = true
opt-level = "z"

[profile.dev]
opt-level = 3
debug = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--all-features"]